--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.2.4"
+    "sonner": "^1.2.4",
+    "tailwind-merge": "^2.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
