--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
     "@tailwindcss/forms": "^0.5.7",
     "@xata.io/client": "^0.28.1",
     "lucide-react": "^0.295.0",
